Ajout des propriétées de padding top dans la balise p de titre-formulaire de 8px pour espacer H2 et p, puis correction pour ajouter gap 35px dans formulaire-filtre pour espacer tout les éléments de 35px

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ a {
     display: flex;
     flex-direction: column;
     padding-top: 30px;
+    gap: 35px;
+}
+
+.titre-formulaire p {
+    padding-top: 8px;
 }
 
 /****** Hebergements And Populaires ***********/
